<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>openmv_driver</name>
  <version>0.0.1</version>
  <description>ROS2 action server driver for the awesome OpenMV cams.</description>
  <maintainer email="flo.gramss@gmail.com">Florian Gramß</maintainer>
  <license>Apache License 2.0</license>

  <author email="flo.gramss@gmail.com">Florian Gramß</author>

  <build_depend>sensor_msgs</build_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>openmv_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <!-- These test dependencies are optional
  Their purpose is to make sure that the code passes the linters -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
